--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,7 +49,9 @@ en:
     start: "Start"
 
     panel: "TestGuru Admin Panel"
-    home: "Home"
+    login: "Log in"
+    signup: "Signup"
+    testguru: "TestGuru"
     tests: "Tests"
     welcome: "Welcome, %{name} Guru"
     hello: "Hello, %{name}!"
@@ -57,6 +59,9 @@ en:
     project: "Study project"
     school_html: "in <a href='http://thinknetica.com/'>Thinknetica</a> online school"
     unauthorized: "You are not authorized to view this page"
+    enter: "Enter"
+    enter_gate: "Enter the guru gates"
+    email: "Enter email"
   helpers:
     select:
       prompts:
