--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,13 +18,18 @@ ru:
     start: "Начать"
 
     panel: "Панель администратора TestGuru"
-    home: "Главная"
+    login: "Войти"
+    signup: "Регистрация"
+    testguru: "TestGuru"
     welcome: "Добро пожаловать, гуру %{name}"
     hello: "Привет, %{name}!"
     logout: "Выйти"
     project: "Учебный проект"
     school_html: "в онлайн школе <a href='http://thinknetica.com/'>Thinknetica</a>"
     unauthorized: "У вас нет прав для просмотра данной страницы"
+    enter: "Войти"
+    enter_gate: "Войдите в гуру-врата"
+    email: "Введите email"
   helpers:
     submit:
       test:
