--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,7 @@ ru:
     answer: "Ответ"
     answers: "Ответы"
     test_passages: "Прохождения тестов"
+    gists: "Gist"
     title: "Название"
     level: "Уровень"
     show: "Перейти"
@@ -115,3 +116,8 @@ ru:
     gist:
       success: "Gist успешно создан: %{url}"
       failure: "Не удалось создать gist"
+  gists:
+    gists: "Gists"
+    question: 'Вопрос'
+    url: 'Ссылка'
+    guru: 'Гуру'
