--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,13 @@ en:
         level: "Level"
         category_id: "Category"
   admin:
+    gists:
+      index:
+        gists: "Gists"
+        question: 'Question'
+        url: 'Link'
+        actions: 'Actions'
+        guru: 'Guru'
     tests:
       create:
         success: "Test was successfully created"
@@ -152,8 +159,3 @@ en:
     gist:
       success: "Gist successfully created: %{link}"
       failure: "Failed to create gist"
-  gists:
-    gists: "Gists"
-    question: 'Question'
-    url: 'Link'
-    guru: 'Guru'
