--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,7 +61,9 @@ en:
     school_html: "in <a href='http://thinknetica.com/'>Thinknetica</a> online school"
     unauthorized: "You are not authorized to view this page"
     enter: "Enter"
+    sign_up: "Sign up"
     enter_gate: "Enter the guru gates"
+    become_guru: "Become a guru"
     email: "Enter email"
     gist_question: "A question about %{title} from TestGuru"
     devise:
