--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,7 +29,9 @@ ru:
     school_html: "в онлайн школе <a href='http://thinknetica.com/'>Thinknetica</a>"
     unauthorized: "У вас нет прав для просмотра данной страницы"
     enter: "Войти"
+    sign_up: "Создать аккаунт"
     enter_gate: "Войдите в гуру-врата"
+    become_guru: "Станьте гуру"
     email: "Введите email"
     gist_question: "Вопрос о %{title} из TestGuru"
     devise:
