--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -5,3 +5,8 @@ en:
       Question: "Question"
       Answer: "Answer"
       TestPassage: "Test Passage"
+    attributes:
+      user:
+        first_name: "First name"
+        last_name: "Last name"
+        
