Files for screencast

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,8 @@ en:
         delete: "Delete"
       test_completeness:
         not_completed: "Selected test has not been completed"
+      form_inline:
+        submit: 'Ok'
     questions:
       create:
         success: "Question was successfully created"
