Add I18n-js support

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,6 +12,7 @@ ru:
     level: "Уровень"
     show: "Перейти"
     edit: "Редактировать"
+    cancel: "Отмена"
     delete: "Удалить"
     sure?: "Вы уверены?"
     back: "Назад"
