--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
     level: "Level"
     show: "Show"
     edit: "Edit"
+    cancel: "Cancel"
     delete: "Delete"
     sure?: "Are you sure?"
     back: "Back"
